tests/baselines/reference/parserErrorRecovery_ObjectLiteral5.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral5.ts(2,7): error TS1005: ':' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral5.ts (1 errors) ====
    var v = { a: 1,
    return;
          ~
!!! error TS1005: ':' expected.